# barentswatch-apiclient

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  barents-watch.download.py  barents-watch.token.sh  pyproject.toml  tox.ini
.github/workflows/: build-binaries.yaml  build-wheel.yml  gh-pages.yml  test.yaml
docs/: README.md  _config.yml  _toc.yml  modules.rst
src/bwac/: __init__.py  utils.py  version.py
src/bwac/cli/: base.py  historic.py  livestream.py  main.py
src/bwac/core/: access.py  constants.py  historic_consumer.py  livestream_consumer.py
tests/bwac/core/: test_access.py  test_livestream_consumer.py
