[build-system]
requires = ["setuptools >= 61.0.0",
    "build",
    "sphinx"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "bwac"
dynamic = ["version"]
description = "Barentswatch REST API Client"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["barentswatch", "client"]
authors = [
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]
requires-python = ">=3.10"

maintainers = [
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
]

dependencies = [
    "requests",
    "pandas",
    "pydantic",
    "pydantic-settings",
]

[project.urls]
homepage = "https://github.com/2maz/barentswatch-apiclient"
documentation = "https://2maz.github.io/barentswatch-apiclient"
repository = "https://github.com/2maz/barentswatch-apiclient"

[project.optional-dependencies]

dev = [
    "isort",
    "jupyter-book",
    "pre-commit",
    "ruff",
    "sphinx-autoapi",
    "tox"
]

test = [
    "coverage",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-mock",
    "pydot",
    "tox"
]


[project.scripts]
bwac = "bwac.cli.main:run"

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.package-data]
"bwac" = [ "resources/**/*" ]

[tool.setuptools.dynamic]
version = { attr = "bwac.__version__" }

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 120

[tool.isort]
multi_line_output = 8

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.per-file-ignores]
"conftest.py" = ["E501"]
"test_gpu.py" = ["E501"]
